# projet-lif15

./: CMakeLists.txt  Makefile  ProjectHome.md  README.txt  main.cpp
src/: Doxyfile  automate.cpp  automate.h  main.cpp
trunk/: CMakeLists.txt  README.txt
trunk/res/: automate.txt
trunk/src/: Doxyfile  automate.cpp  automate.h  main.cpp
